fixed fontSize for input field for visibility

--- a/quizzer/src/App.css
+++ b/quizzer/src/App.css
@@ -155,7 +155,6 @@
   width: 224px;
 }
 
-  /* stripe */
   body, html {
     background-color: #f6f9fc;
     font-size: 18px;
@@ -170,13 +169,6 @@
     margin: 20px 0;
     padding: 0;
   }
-  
-  .Checkout {
-    margin: 0 auto;
-    max-width: 800px;
-    box-sizing: border-box;
-    padding: 0 5px;
-  }  
   
   button {
     white-space: nowrap;
@@ -200,14 +192,6 @@
     margin-top: 10px;
   }
   
-
-  
-  form {
-    margin-bottom: 40px;
-    padding-bottom: 40px;
-    border-bottom: 3px solid #e6ebf1;
-  }
-  
   button:hover {
     color: #fff;
     cursor: pointer;
@@ -216,18 +200,3 @@
     box-shadow: 0 7px 14px rgba(50, 50, 93, .10), 0 3px 6px rgba(0, 0, 0, .08);
   }
   
-  .StripeElement {
-    display: block;
-    margin: 10px 0 20px 0;
-    max-width: 500px;
-    padding: 10px 14px;
-    box-shadow: rgba(50, 50, 93, 0.14902) 0px 1px 3px, rgba(0, 0, 0, 0.0196078) 0px 1px 0px;
-    border-radius: 4px;
-    background: white;
-  }
-  
-  .StripeElement--focus {
-    box-shadow: rgba(50, 50, 93, 0.109804) 0px 4px 6px, rgba(0, 0, 0, 0.0784314) 0px 1px 3px;
-    -webkit-transition: all 150ms ease;
-    transition: all 150ms ease;
-  }
